class-march-2025/k8s/netPol/np_egress1.yml
apiVersion: v1
kind: Pod
metadata:
  name: vishalng1
  namespace: default
  labels: 
    ac1: nginx1
spec:
  containers: 
  - image: nginx:alpine
    imagePullPolicy: IfNotPresent
    name: nginx-cont
    ports: 
    - containerPort: 80
      protocol: TCP
      name: nginxport
  nodeName: vishal-worker
  os: 
    name: linux
---

apiVersion: v1
kind: Pod
metadata:
  name: vishalng2
  namespace: default
  labels: 
    ac2: nginx2
spec:
  containers: 
  - image: nginx:alpine
    imagePullPolicy: IfNotPresent
    name: nginx-cont
    ports: 
    - containerPort: 80
      protocol: TCP
      name: nginxport
  nodeName: vishal-worker2
  os: 
    name: linux


---

apiVersion: v1
kind: Pod
metadata:
  name: vishalch1
  namespace: default
  labels: 
    ac1: chrome1
spec:
  containers: 
  - image: lscr.io/linuxserver/chrome:latest
    imagePullPolicy: IfNotPresent
    name: chrome-cont
    ports: 
    - containerPort: 3000
      protocol: TCP
      name: chromeport
  nodeName: vishal-worker
  os: 
    name: linux



---


apiVersion: v1
kind: Pod
metadata:
  name: vishalch2
  namespace: default
  labels: 
    ac2: chrome2
spec:
  containers: 
  - image: lscr.io/linuxserver/chrome:latest
    imagePullPolicy: IfNotPresent
    name: chrome-cont
    ports: 
    - containerPort: 3000
      protocol: TCP
      name: chromeport
  nodeName: vishal-worker2
  os: 
    name: linux
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: vishalnetpol1
  namespace: default
  labels: 
    ac1: netpol1
spec: 
  policyTypes: 
  - Egress
  podSelector: 
    matchLabels: 
      ac1: chrome1
  egress: 
  - to: 
    - podSelector: 
        matchLabels: 
          ac1: nginx1
    ports: 
    - port: 80
      protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: vishalnetpol2
  namespace: default
  labels: 
    ac2: netpol2
spec: 
  policyTypes: 
  - Egress
  podSelector: 
    matchLabels: 
      ac2: chrome2
  egress: 
  - to: 
    - podSelector: 
        matchLabels: 
          ac2: nginx2
    ports: 
    - port: 80
      protocol: TCP
